idel terminal added

--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
+body{
+    margin: 1;
+}
 h1{font-size:50px;
     font-family: 'Oswald', sans-serif;
     font-family: 'Poppins', sans-serif;
     
 }
-.name-highlite{color: rgb(255, 217, 0);}
+.name-highlite{color: rgb(255, 217, 0);
+position: relative;
+left: 90px;
+}
+h2{
+    position: relative;
+right: 100px;
+}
+
+.name-highlite2{color: rgb(20, 20, 20);
+position: relative;
+left: 100px;}
+
 
 .half-widht{
     width: 40%; 
@@ -12,10 +27,41 @@ h1{font-size:50px;
 .half-widht{
     width: 50%;
     float: left;
-    
 }
 .half-widht img{
     width: 80%;
     margin-left: 15%;
     padding-left: 2%;
+    float: left;
+}
+.top-banner{
+    background-image: url("developer-portfolio/top-banner.png");
+background-repeat: no-repeat;
+}
+section{height: 500px;
+    padding-bottom: 150px;
+
+}
+.link-button{
+    text-decoration: none;
+    background-image: -webkit-linear-gradient(45deg, lightSalmon , tomato);
+    padding:10px 20px ;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+.dream-area{
+    width: 100%;
+    float: right;
+    
+}
+.half-widht{
+    width: 50%;
+    
+}
+.half-width img{ width: 30%;
+    margin-left: 0%;
+    padding-left: 0;
+    float: left;
+
 }
