--- a/style.css
+++ b/style.css
@@ -1,38 +1,38 @@
 body{
-    margin: 1;
-}
-h1{font-size:50px;
+    margin: 0;
+
     font-family: 'Oswald', sans-serif;
-    font-family: 'Poppins', sans-serif;
     
 }
+
+
+h1{
+    font-size: 50px;
+}
+h2{ font-size: 40px;
+   
+
+}
+p{color: dimgray}
+
 .name-highlite{color: rgb(255, 217, 0);
-position: relative;
-left: 90px;
-}
-h2{
-    position: relative;
-right: 100px;
-}
+    }
+
 
 .name-highlite2{color: rgb(20, 20, 20);
-position: relative;
-left: 100px;}
-
-
-.half-widht{
-    width: 40%; 
-    float: left;
 }
+
 .half-widht{
-    width: 50%;
-    float: left;
+    width: 40%;
+   float: left;
+    margin-bottom: 7%;
+    padding-left: 5%;
+
 }
 .half-widht img{
-    width: 80%;
-    margin-left: 15%;
-    padding-left: 2%;
-    float: left;
+    width: 100%;
+    
+   
 }
 .top-banner{
     background-image: url("developer-portfolio/top-banner.png");
@@ -45,23 +45,35 @@ section{height: 500px;
 .link-button{
     text-decoration: none;
     background-image: -webkit-linear-gradient(45deg, lightSalmon , tomato);
-    padding:10px 20px ;
+     padding:10px 20px ;
     border-radius: 5px;
     color: white;
     font-weight: 700;
 }
-.dream-area{
-    width: 100%;
-    float: right;
-    
-}
-.half-widht{
-    width: 50%;
-    
-}
-.half-width img{ width: 30%;
-    margin-left: 0%;
-    padding-left: 0;
-    float: left;
 
+.dream-area{
+    background-image: url(developer-portfolio/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 15px;
+    height: 50%;
+    width: 40%;
+    background-color: aliceblue;
+    
+}
+.experience-area{
+    background-image: url(developer-portfolio/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-right: 10px solid;
+    border-image: linear-gradient(rgb(122, 175, 255),rgb(166, 71, 255));
+    border-image-slice: 5;
+}
+footer p{
+    text-align: center;
 }
